# pytest_playwright_tests

./: Makefile  README.md  conftest.py  pyproject.toml  test_playwright_demo.py
utils/: get_user_data_from_file.py
